--- a/public/citi.html
+++ b/public/citi.html
@@ -146,12 +146,12 @@
                             <li class="thegold">
                                 <img src="img/partners/table.png">
                                 <a class="butn gold" href="banklogs">
-                                    Bank Login
+                                    Bank Logs
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     
                                 </a>
                             </li>
@@ -1155,11 +1155,11 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
-                    Bank Log <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
+                    Mail / SMS <img src="img/partners/tele.png">
                 </button>
 
-                <button class="butn" id="showtoasts" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
                     Download <i class="fas fa-angle-down"></i>
                 </button>
             </div>
@@ -1167,14 +1167,14 @@
     </div>
 </div>
 
-<div class="modal fade"  id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
                     <h4 class="set" id="deposit-type"> Balance: $0 </h4>
                 </div>
-                <button type="button" class="close" id="depo-logo" data-bs-dismiss="modal">
+                <button type="button" class="close" id="depo-logo" data-bs-toggle="modal" data-bs-target="#vpnModal">
                     <img src="img/partners/gogle.png" id="depo-img">
                 </button>
             </div>
