--- a/public/download.html
+++ b/public/download.html
@@ -147,12 +147,12 @@
                             <li class="thegold">
                                 <img src="img/partners/table.png">
                                 <a class="butn gold" href="banklogs">
-                                    Bank Login
+                                    Bank Logs
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     
                                 </a>
                             </li>
@@ -425,7 +425,7 @@
 </div>
 
 
-<div class="modal fade"  id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -509,14 +509,14 @@
     </div>   
 </div>
 
-<div class="modal fade"  id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
                     <h4 class="set" id="deposit-type"> Balance: $0 </h4>
                 </div>
-                <button type="button" class="close" id="depo-logo" data-bs-dismiss="modal">
+                <button type="button" class="close" id="depo-logo" data-bs-toggle="modal" data-bs-target="#vpnModal">
                     <img src="img/partners/gogle.png" id="depo-img">
                 </button>
             </div>
@@ -543,7 +543,7 @@
 
 
 
-<div class="modal fade"  id="profileModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="profileModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -576,7 +576,7 @@
     </div>   
 </div>
 
-<div class="modal fade"  id="verifyModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="verifyModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
