--- a/public/pnc.html
+++ b/public/pnc.html
@@ -660,8 +660,8 @@
 
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#vpnModal">
-            View Profile <img src="img/partners/settings.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
     
