--- a/public/chime.html
+++ b/public/chime.html
@@ -837,8 +837,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#vpnModal">
-            View Profile <img src="img/partners/settings.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
 
