--- a/public/download.html
+++ b/public/download.html
@@ -18,7 +18,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/app.css" rel="stylesheet">
-    <link href="css/plugins/downloads.css" rel="stylesheet">
+    <link href="css/plugins/download.css" rel="stylesheet">
     <link href="css/plugins/loads.css" rel="stylesheet">
 </head>
 <body id="thebodyz" style="background: #121d33;">
@@ -258,7 +258,7 @@
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
                         <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#profileModal">
-                            Bank Log <img src="img/partners/tele.png">
+                            Mail / SMS <img src="img/partners/tele.png">
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
