--- a/public/download.html
+++ b/public/download.html
@@ -561,7 +561,7 @@
                 <form  id="the-form" onsubmit="signUpFunction()">
                     <div class="form-group col-md-12" id="form">
                         <div id="the-life">
-                            <img id="the-flag7" />
+                            <img id="the-flag7" src="img/partners/comm.png"/>
                             <input type="text" class="form-control" id="inputLife" autofocus placeholder="Enter Email Address" required>
                         </div> <div id="recaptcha-container"></div>
                     </div> <hr class="thehr" id="hr">
