--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -36,12 +36,12 @@
 <header class="header-style2">
     <div class="navbar-default">
         <nav class="navbar">
-            <a class="navbar-header" href="chime">
+            <a class="navbar-header" href="home">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
+                    <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
                     <span id="jinaHolder2">
-                        Bank Logs Available
+                        Cashout Method Guide
                     </span>
                 </div>
             </a>
