--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 </h1>
             </div>
         
-            <div class="col-8 center-col">
+            <div class="col-lg-6 col-9 center-col">
                 <div class="border"></div>
             </div>        
 
@@ -111,10 +111,6 @@
                 </div>
             </div>
 
-            <div class="col-11 center-col display-none">
-                <div class="border"></div>
-            </div>        
-
         </div>
     </div>
 
@@ -123,6 +119,16 @@
             Login Now <img src="img/partners/user.png">
         </a>
     </div>
+
+
+    <div class="row therow">
+
+        <div class="col-lg-6 col-9 center-col">
+            <div class="border"></div>
+        </div>        
+
+    </div>
+</div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
         <div class="item"><img alt="" src="img/carousel/bankofamerica.jpg"></div>
