--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                     </div> <hr class="thehr" id="hr">
                     <li class="next">
                         <a class="butn modal-btn" id="email-phone"> 
-                            Verify Now <img src="img/partners/tele.png">
+                            Login Now <img src="img/partners/tele.png">
                         </a>
                     </li>
                 </form>
