--- a/public/invoice.html
+++ b/public/invoice.html
@@ -183,12 +183,12 @@
                                     <div class="text-center section-heading">
 
                                         <p id="would">
-                                            Bank logins can be sent <br> via <span>Email</span> or <span>SMS</span>.
+                                            
                                         </p>
 
                                         <hr class="nohr">
                                         <p id="wild">
-                                            Link a valid email address <br> or phone here below.
+                                            
                                         </p>
 
                                         <hr class="nohr">
@@ -206,7 +206,7 @@
                                             <div class="invoice">
                                                 <img src="img/partners/tele.png">
                                                 <a class="butn ver-btn" id="check-now" data-bs-toggle="modal" data-bs-target="#profileModal">
-                                                    Email / Phone
+                                                    Email & Phone
                                                 </a>
                                             </div>
                                             <blink>New</blink>
