--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5801,8 +5801,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="invoice" style="letter-spacing: 1.7px !important;">
-            My Logins <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.8px !important;">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -5933,8 +5933,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Mail / SMS <img src="img/partners/tele.png">
+                  <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    Bank Log <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
