--- a/public/chase.html
+++ b/public/chase.html
@@ -1404,8 +1404,8 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Mail / SMS <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    Bank Log <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
