--- a/public/download.html
+++ b/public/download.html
@@ -258,7 +258,7 @@
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
                         <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#profileModal">
-                            Mail / SMS <img src="img/partners/tele.png">
+                            Bank Log <img src="img/partners/tele.png">
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
