--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5933,7 +5933,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                  <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#emailModal">
+                <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
                     Bank Log <img src="img/partners/tele.png">
                 </button>
 
