--- a/public/navyfederal.html
+++ b/public/navyfederal.html
@@ -1370,7 +1370,7 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#emailModal">
+                <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
                     Bank Log <img src="img/partners/tele.png">
                 </button>
 
