--- a/public/download.html
+++ b/public/download.html
@@ -257,7 +257,7 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#profileModal">
+                        <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
                             Bank Log <img src="img/partners/tele.png">
                         </button>
 
