--- a/public/download.html
+++ b/public/download.html
@@ -295,27 +295,9 @@
                     <canvas id="chart3"></canvas>
                 </div> 
 
-                <div class="col-lg-10 col-12 center-col modal-body no-bord lg-display-none">
+                <div class="col-lg-9 col-12 center-col lg-display-none modal-body no-bord">
                     <canvas id="chart4"></canvas>
                 </div> 
-            </div>
-
-
-            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div">
-                <div class="modal-content" id="modalsend">
-                    <div class="brock">
-                        <div class="modal-body" id="voice-body">
-                            <div id="voice-body-div">
-                                <div id="my-voice">
-                                    <div class="text-center section-heading">
-                                        <p id="would"> </p> 
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>    
-                    </div>
-                </div>
             </div>
 
         </div>
