--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5933,8 +5933,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
-                    Bank Log <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
+                    Email SMS <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
