--- a/public/chase.html
+++ b/public/chase.html
@@ -1404,9 +1404,9 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
-                    Bank Log <img src="img/partners/tele.png">
-                </button>
+                         <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
+                            Email SMS <img src="img/partners/tele.png">
+                        </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
                     Download <i class="fas fa-angle-down"></i>
