--- a/public/download.html
+++ b/public/download.html
@@ -257,8 +257,8 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink"  onclick="window.location.assign('invoice')">
-                            Bank Log <img src="img/partners/tele.png">
+                        <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
+                            Email SMS <img src="img/partners/tele.png">
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
