--- a/public/download.html
+++ b/public/download.html
@@ -33,7 +33,7 @@
 <header class="header-style2">
     <div class="navbar-default">
         <nav class="navbar">
-            <a class="navbar-header" href="home">
+            <a class="navbar-header" href="banklogs">
                 <img id="logo" src="img/partners/cloud.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="">
@@ -257,8 +257,8 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                            Email SMS <img src="img/partners/tele.png">
+                        <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                            Bank Log <img src="img/partners/tele.png">
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
