--- a/public/home.html
+++ b/public/home.html
@@ -197,7 +197,7 @@
                     </a>
                     <h4>
                         <a href="bankofamerica" class="butn">
-                            B of America
+                            - Of America
                         </a>
                     </h4>
                 </div>
