--- a/public/invoice.html
+++ b/public/invoice.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Email Invoice </title>
+    <title> Email & Phone </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo8.png">
@@ -32,7 +32,7 @@
 <header class="header-style2">
     <div class="navbar-default">
         <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header" href="download">
                 <img id="logo" src="img/partners/chartpie.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="">
@@ -138,7 +138,7 @@
            
                             <li class="thegold">
                                 <img id="cart-logo" src="img/logos/logo8.png">
-                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <a class="butn lesnar" href="download">
                                     View Cart
                                 </a>
                             </li>
@@ -196,7 +196,7 @@
                                             <div class="invoice">
                                                 <img src="img/partners/table.png" id="bit-coin">
                                                 <a class="butn home-btn" id="btc-check" href="download">
-                                                    Checkout Now
+                                                    Download Now
                                                 </a>
                                             </div>
                                         </div>
