--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -36,7 +36,7 @@
 <header class="header-style2">
     <div class="navbar-default">
         <nav class="navbar">
-            <a class="navbar-header" href="home">
+            <a class="navbar-header" href="invoice">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
