--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#emailModal">
             Login Now <img src="img/partners/user.png">
         </a>
     </div>
