--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5934,7 +5934,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
            
             <div class="modal-footer modal-checkout" id="cart-footer">
                 <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Email SMS <img src="img/partners/tele.png">
+                    Bank Log <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
