--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -901,8 +901,8 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Email SMS <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                    Bank Log <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
