--- a/public/navyfederal.html
+++ b/public/navyfederal.html
@@ -1241,8 +1241,8 @@
 
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="banklogs">
-            Bank Logs <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="home">
+            Home Page <img src="img/partners/table.png">
         </a>
     </div>
 
