--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -861,10 +861,9 @@
         <div id="particles-xs"></div> 
     </div>
 
-
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="banklogs">
-            Bank Logs <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="home">
+            Home Page <img src="img/partners/table.png">
         </a>
     </div>
 
