--- a/public/invoice.html
+++ b/public/invoice.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Email & Phone </title>
+    <title> Get Invoice </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo8.png">
@@ -143,15 +143,15 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/table.png">
-                                <a class="butn gold" href="banklogs">
-                                    Bank Logs
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/user.png">
+                                <img src="img/partners/gogle.png">
                                 <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
-                                    
+                                    My Profile
                                 </a>
                             </li>
                             
