--- a/public/navyfederal.html
+++ b/public/navyfederal.html
@@ -143,15 +143,15 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/table.png">
-                                <a class="butn gold" href="banklogs">
-                                    Bank Logs
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/user.png">
+                                <img src="img/partners/gogle.png">
                                 <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
-                                    
+                                    My Profile
                                 </a>
                             </li>
                             
