--- a/public/chime.html
+++ b/public/chime.html
@@ -966,7 +966,7 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
                     Bank Log <img src="img/partners/tele.png">
                 </button>
 
