--- a/public/download.html
+++ b/public/download.html
@@ -257,8 +257,9 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
-                            Bank Log <img src="img/partners/tele.png">
+                        <button class="butn" id="showlink"  data-bs-toggle="modal" data-bs-target="#profileModal">
+                            Mail Link <img src="img/partners/tele.png">
+                            
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -299,6 +300,25 @@
                     <canvas id="chart4"></canvas>
                 </div> 
             </div>
+
+
+            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div">
+                <div class="modal-content" id="modalsend">
+                    <div class="brock">
+                        <div class="modal-body" id="voice-body">
+                            <div id="voice-body-div">
+                                <div id="my-voice">
+                                    <div class="text-center section-heading">
+                                        <p id="would"> </p> 
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
