--- a/public/home.html
+++ b/public/home.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/app.css" rel="stylesheet">   
-    <link href="css/plugins/banklogs.css" rel="stylesheet">   
+    <link href="css/plugins/home.css" rel="stylesheet">   
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -5917,7 +5917,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
            
             <div class="modal-footer modal-checkout" id="cart-footer">
                 <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Bank Log <img src="img/partners/tele.png">
+                    Mail Link <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
@@ -5965,11 +5965,12 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="js/main/core.banklogs.js"></script>
-    <script src="js/main/banklogs.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
+    <script src="js/main/core.home.js"></script>
+    <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/banklogs.js"></script>
-    <script src="js/auth/banklogs.js"></script>
+    <script src="js/cart/home.js"></script>
+    <script src="js/auth/home.js"></script>
 
 </body>
 </html>
