--- a/public/index.html
+++ b/public/index.html
@@ -706,8 +706,8 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
-                    Bank Log <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
+                    Mail Link <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
@@ -753,7 +753,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.index.js"></script>
     <script src="js/main/index.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
