--- a/public/invoice.html
+++ b/public/invoice.html
@@ -149,8 +149,8 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/gogle.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <img src="img/partners/check.png">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     My Profile
                                 </a>
                             </li>
@@ -199,6 +199,7 @@
                                                     Download Now
                                                 </a>
                                             </div>
+                                            <blink>Best</blink>
                                         </div>
                                         <hr class="nohr">
 
@@ -209,8 +210,8 @@
                                                     Email & Phone
                                                 </a>
                                             </div>
-                                            <blink>New</blink>
                                         </div>          
+
 
                                     </div>
                                 </div>
