--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -149,8 +149,8 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/gogle.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <img src="img/partners/check.png">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     My Profile
                                 </a>
                             </li>
