--- a/public/chime.html
+++ b/public/chime.html
@@ -967,7 +967,7 @@
            
             <div class="modal-footer modal-checkout" id="cart-footer">
                 <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Bank Log <img src="img/partners/tele.png">
+                    Mail Link <img src="img/partners/tele.png">
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
