--- a/public/download.html
+++ b/public/download.html
@@ -140,7 +140,7 @@
 
                             <li class="thegold">
                                 <img id="cart-logo" src="img/logos/logo8.png">
-                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <a class="butn lesnar" id="thetot" href="home">
                                     View Cart
                                 </a>
                             </li>
