--- a/public/download.html
+++ b/public/download.html
@@ -258,8 +258,7 @@
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
                         <button class="butn" id="showlink"  data-bs-toggle="modal" data-bs-target="#profileModal">
-                            Mail Link <img src="img/partners/tele.png">
-                            
+                            Mail Link <img src="img/partners/tele.png">            
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -302,7 +301,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div">
+            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div" onclick="window.location.assign('home')">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-body" id="voice-body">
