--- a/public/pnc.html
+++ b/public/pnc.html
@@ -822,7 +822,7 @@
     </div>   
 </div>
 
-    <script src="js/pages/merc.js"></script>
+    <script src="js/pages/gle.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
