--- a/public/huntington.html
+++ b/public/huntington.html
@@ -844,13 +844,11 @@
         <div id="particles-xs"></div> 
     </div>
 
-
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="home">
-            Home Page <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="invoice">
+            Email Link <img src="img/partners/cloud.png">
         </a>
     </div>
-   
 
     <div class="section-heading">
         <h4></h4>
