--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -856,8 +856,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="home">
-            Home Page <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="invoice">
+            Email Link <img src="img/partners/cloud.png">
         </a>
     </div>
 
