--- a/public/invoice.html
+++ b/public/invoice.html
@@ -192,7 +192,7 @@
                                         </p>
 
                                         <hr class="nohr">
-                                        <div class="confirm-div link-first-div" onclick="window.location.assign('download')">
+                                        <div class="confirm-div link-first-div">
                                             <div class="invoice">
                                                 <img src="img/partners/table.png" id="bit-coin">
                                                 <a class="butn home-btn" id="btc-check" href="download">
