--- a/public/index.html
+++ b/public/index.html
@@ -751,7 +751,7 @@
     <script src="js/main/index.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/index.js"></script>
-    <script src="js/auth/index.js"></script>
+    <script src="js/auth/login.js"></script>
 
 </body>
 </html>
