--- a/public/404.html
+++ b/public/404.html
@@ -94,7 +94,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
-                    <h4 class="set" id="invoice-type"> BURNER MAIL</h4>
+                    <h4 class="set" id="invoice-type"> </h4>
                 </div>
                 <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="sign-img">
