--- a/public/download.html
+++ b/public/download.html
@@ -257,8 +257,8 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink"  data-bs-toggle="modal" data-bs-target="#profileModal">
-                            Mail Link <img src="img/partners/tele.png">            
+                        <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                            Bank Log <img src="img/partners/tele.png">            
                         </button>
 
                         <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -301,7 +301,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div" onclick="window.location.assign('home')">
+            <div class="col-lg-45 col-md-7 col-12 jurit center-col" id="voice-div" onclick="window.location.assign('banklogs')">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-body" id="voice-body">
@@ -324,8 +324,8 @@
 
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="home">
-            Home Page <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
 
