--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid infinite-floating thecont">
 
         <div class="row therow">
-            <div class="col-12 center-col banner-col display-none" style="text-align: center !important;">
+            <div class="col-12 center-col banner-col" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
                         <b class="is-visible">Bank Logs</b>
@@ -94,7 +94,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
-                    <h4 class="set" id="invoice-type"> BURNER MAIL</h4>
+                    <h4 class="set" id="invoice-type"> </h4>
                 </div>
                 <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="sign-img">
