--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5801,8 +5801,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="invoice">
-            Email Link <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
 
@@ -5910,8 +5910,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Mail Link <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                    Bank Log <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
