--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -766,8 +766,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="invoice">
-            Email Link <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
 
@@ -890,8 +890,8 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('invoice')">
-                    Mail Link <img src="img/partners/tele.png">
+                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                    Bank Log <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
